[package]
name = "rjmx-exporter"
version = "0.1.0"
edition = "2021"
authors = ["rJMX-Exporter Team"]
description = "High-performance JMX metrics exporter written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jsoonworld/rJMX-Exporter"
keywords = ["jmx", "prometheus", "metrics", "monitoring", "jolokia"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client (Phase 2에서 사용)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Utilities
once_cell = "1.19"
regex = "1.10"

[dev-dependencies]
# Testing
tokio-test = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
assert_cmd = "2.0"
predicates = "3.0"
wiremock = "0.6"
criterion = "0.8"
tempfile = "3.10"

[[bench]]
name = "collector_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "startup_bench"
harness = false

[[bench]]
name = "scrape_latency_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
